--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:718RPvmr9NokIUs1DaykH1VCCGHd2sEVHB0pVongXOw=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=info
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
